# atsama5d27

./: Cargo.toml  README.md  build.rs  link.ld  memory.x
.cargo/: config
cryptoauthlib/: Cargo.toml  README.md  build.rs
cryptoauthlib/cryptoauthlib/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
cryptoauthlib/cryptoauthlib/lib/: CMakeLists.txt  Makefile  atca_basic.c  atca_config.h  atca_device.c  atca_iface.c  cmake_install.cmake
cryptoauthlib/cryptoauthlib/lib/calib/: calib_basic.c  calib_command.c  calib_execution.c  calib_info.c  calib_sha.c  calib_write.c
cryptoauthlib/cryptoauthlib/lib/hal/: atca_hal.c  atca_hal.h  hal_swi_gpio.c  hal_swi_uart.c
cryptoauthlib/lib/: Makefile  atca_config.h  cmake_install.cmake
cryptoauthlib/src/: bindings.rs  lib.rs  link.rs
scripts/: .gdbinit  at91bootstrap.elf  at91bootstrap.gdb  debug-aes.sh  debug-aesb.sh  debug-avalanche.sh  debug-camera.sh  debug-charger.sh  debug-fitment.sh  debug-mmc.sh  debug-nfc.sh  debug-rtc.sh  debug-se.sh  debug-sha.sh  debug-shdwc.sh  debug-uart-dma.sh  debug-usb.sh  debug-usbhost.sh  debug.sh  init.gdb  reboot-in-normal-mode.sh  reboot-in-samba-mode.sh  rtt-log.sh  start-gdb-server.sh  uart-console-se.sh  uart-console.sh  write_bin_sdcard.sh
src/: adc.rs  aes.rs  aesb.rs  aic.rs  cache.rs  console.rs  display.rs  dma.rs  flexcom.rs  heap.rs  isc.rs  l1cache.rs  l2cc.rs  lcdc.rs  lcdspi.rs  lib.rs  logging.rs  main.rs  mem.rs  pio.rs  pit.rs  pmc.rs  rstc.rs  rtc.rs  sckc.rs  sdmmc.rs  se_port.rs  sfr.rs  sha.rs  shdwc.rs  spi.rs  start.S  tc.rs  trng.rs  twi.rs  uart.rs  usb_bus.rs  usbhost.rs
utralib/: Cargo.toml  build.rs
utralib/atsama5d/: ATSAMA5D27.svd
utralib/src/: generated.rs
