[workspace]
members = ["utralib", "cryptoauthlib"]

[package]
name = "atsama5d27"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fitment"
required-features = ["fitment"]

[[bin]]
name = "se"

[dependencies]
armv7 = { git = "https://github.com/Foundation-Devices/armv7.git", branch = "update" }
bitflags = "2.4.1"
rtt-target = { git = "https://github.com/Foundation-Devices/rtt-target.git", branch = "cortex-a", features = ["cortex-a"], optional = true }
utralib = { path = "./utralib", default_features=false, features = ["atsama5d27"] }
cryptoauthlib = { path = "./cryptoauthlib" }
r0 = "1.0.0"
embedded-graphics = { version = "0.8.1", optional = true }
embedded-hal = { version = "0.2.7", features = ["unproven"], optional = true }
ft3269 = { git = "https://github.com/Foundation-Devices/ft3269.git", optional = true }
drv2605 = { version = "0.1.0", optional = true }
is31fl32xx = { version = "0.1.0", optional = true }
sha2 = { version = "0.10.8", default-features = false }
zeroize = { version = "1.7.0", default-features = false, features = ["zeroize_derive"] }
constant_time_eq = "0.3.0"

[build-dependencies]
png-decoder = "0.1.1"

[features]
hal = ["embedded-hal"]
rtt = ["rtt-target"]
lcd-console = ["embedded-graphics"]
fitment = ["hal", "ft3269", "drv2605", "is31fl32xx"]

default = ["lcd-console", "hal"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-
