# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = ["utralib"]

[package]
name = "atsama5d27"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fitment"
required-features = ["fitment"]

[[bin]]
name = "se"

[[bin]]
name = "camera"
required-features = ["camera"]

[[bin]]
name = "mmc"
required-features = ["mmc"]

[[bin]]
name = "sha"
required-features = ["sha"]

[[bin]]
name = "avalanche"
required-features = []

[[bin]]
name = "charger"
required-features = ["charger"]

[[bin]]
name = "uart-dma"
required-features = []

[[bin]]
name = "usbhost"
required-features = ["usb-host"]

[[bin]]
name = "shdwc"
required-features = []

[[bin]]
name = "rtc"
required-features = []

[[bin]]
name = "aesb"
required-features = []

[dependencies]
armv7 = { git = "https://github.com/Foundation-Devices/armv7.git", branch = "update" }
bitflags = "2.4.1"
rtt-target = { git = "https://github.com/Foundation-Devices/rtt-target.git", branch = "cortex-a", features = ["cortex-a"], optional = true }
utralib = { path = "./utralib", default_features=false, features = ["atsama5d27"] }
r0 = "1.0.0"
embedded-graphics = { version = "0.8.1", optional = true }
embedded-hal = { version = "0.2.7", features = ["unproven"], optional = true }
ft3269 = { git = "https://github.com/Foundation-Devices/ft3269.git", optional = true }
drv2605 = { version = "0.1.0", optional = true }
is31fl32xx = { version = "0.1.0", optional = true }
ovm7690-rs = { git = "https://github.com/Foundation-Devices/ovm7690-rs.git", optional = true }
embedded-sdmmc = { version = "0.7.0", default-features = false, optional = true }
hex = { version = "0.4.3", default-features = false, optional = true }
bq24157 = { git = "https://github.com/Foundation-Devices/bq24157.git", optional = true }
bq27421 = { git = "https://github.com/Foundation-Devices/bq27421.git", optional = true }
ehci = { git = "https://github.com/Foundation-Devices/ehci.git", optional = true }
mass-storage = { git = "https://github.com/Foundation-Devices/mass-storage.git", optional = true }
embedded-alloc = { version = "0.5.1", optional = true }
critical-section = {version = "1.1.2", optional = true }
log = { version = "0.4.21", optional = true }

[build-dependencies]
png-decoder = "0.1.1"

[features]
hal = ["embedded-hal"]
rtt = ["rtt-target"]
lcd-console = ["embedded-graphics"]
fitment = ["hal", "ft3269", "drv2605", "is31fl32xx"]
camera = ["hal", "ovm7690-rs"]
mmc = ["embedded-sdmmc"]
camera-dev = []
camera-prod = []
sha = ["hex"]
charger = ["bq24157", "bq27421"]
heap = ["embedded-alloc"]
logging = ["log", "heap", "critical-section"]
critical-section = ["dep:critical-section", "armv7/critical-section"]
usb-host = ["bq24157", "ehci", "mass-storage", "heap", "logging", "embedded-sdmmc"]

default = ["lcd-console", "hal"]

[profile.dev]
#codegen-units = 1
#debug = 2
#debug-assertions = true # <-
#incremental = false
#opt-level = 3 # <-
#overflow-checks = true # <-

[profile.release]
debug = 1
